[package]
name = "world_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
egui = "0.19.0"
egui_glium = "0.19.0"
egui-winit = "0.19.0"
image = "*"
tinyfiledialogs = "3.0"
dirs-next = "2.0.0"

rand = "0.8.5"
#spade = "2.0.0"